--- a/package.json
+++ b/package.json
@@ -2,13 +2,11 @@
   "name": "wetube",
   "version": "1.0.0",
   "description": "cloning Youtube with Vanilla and NodeJs",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "author": "Wonseok Choi",
-  "license": "ISC",
   "dependencies": {
     "express": "^4.17.1"
+  },
+  "scripts": {
+    "start": "node index.js"
   }
 }
