--- a/package.json
+++ b/package.json
@@ -4,9 +4,19 @@
   "description": "cloning Youtube with Vanilla and NodeJs",
   "author": "Wonseok Choi",
   "dependencies": {
-    "express": "^4.17.1"
+    "@babel/core": "^7.7.4",
+    "@babel/node": "^7.7.4",
+    "@babel/preset-env": "^7.7.4",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
+    "express": "^4.17.1",
+    "helmet": "^3.21.2",
+    "morgan": "^1.9.1"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon --exec babel-node index.js --delay 2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.1"
   }
 }
