update, edit Video Complete!!

--- a/.gitignore
+++ b/.gitignore
@@ -96,6 +96,8 @@ dist
 
 # FuseBox cache
 .fusebox/
+package-lock.json
+uploads
 
 # DynamoDB Local files
 .dynamodb/
@@ -106,3 +108,5 @@ dist
 package-lock.json
 
 .vs
+
+.eslintrc.js
