--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "dotenv": "^8.2.0",
+    "eslint-config-prettier": "^6.9.0",
     "express": "^4.17.1",
     "helmet": "^3.21.2",
     "mongoose": "^4.13.20",
@@ -21,6 +22,9 @@
     "start": "nodemon --exec babel-node init.js --delay 2"
   },
   "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.19.1",
     "nodemon": "^2.0.1"
   }
 }
